# voxel_game

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
.github/workflows/.github/workflows/: nightly-lints.yml
src/: core.rs  flycam.rs  lib.rs  main.rs  prelude.rs  terrain.rs  voxel.rs
src/core/: player.rs  ui.rs
src/discord_presence/: config.rs  mod.rs  state.rs
src/multiplayer/: client_utils.rs  message.rs  mod.rs  server_utils.rs
src/terrain/: chunk_generation.rs  meshing.rs  terrain.rs  terrain_generator.rs
src/voxel/: block.rs  chunk.rs  direction.rs  mesh_builder.rs  quad.rs  texture.rs  voxel.rs  world.rs
