[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"
default-run="client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = "0.11.2"
bevy-inspector-egui = "0.19.0"
bevy_egui = "0.21.0"
renet_visualizer = { version = "0.0.6", features = ["bevy"] }
bevy_renet = "0.0.9"
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.3"
dashmap = "5.5.1"
futures-lite = "1.13.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
simdnoise = "3.1.6"
thread_local = "1.1.7"
bimap = "0.6.3"
lz4 = "1.24.0"
serde-big-array = "0.5.1"
local-ip-address = "0.5.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
