[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"
default-run="client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_egui = "0.31.1"
renet_visualizer = { version = "1.0.0", features = ["bevy"] }
renet_netcode = { version = "1.0.0", features = ["bevy"]}
bevy_renet = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
futures-lite = "2.6.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
simdnoise = "3.1.6"
bimap = "0.6.3"
lz4 = "1.28.1"
serde-big-array = "0.5.1"
local-ip-address = "0.6.3"
discord-presence = "1.5.1"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
quork = { version = "0.8.1", default-features = false, features = ["traits"] }
parking_lot = "0.12.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
